# GearGo

./: .flake8  README.md  pyproject.toml
.github/workflows/: flake8.yml  run_tests  run_tests.yml  run_tests_2.yml
GearGo/: env-template  manage.py  pytest.ini
GearGo/GearGo/: asgi.py  settings.py  urls.py  wsgi.py
GearGo/apps/users/: admin.py  forms.py  tests.py
GearGo/apps/users/migrations/: 0001_initial.py
GearGo/apps/users/templates/account/: login.html  signup.html
GearGo/apps/users/templates/registration/: login.html
GearGo/templates/: about.html  base.html  home.html
