[tool.poetry]
name = "geargo"
version = "0.1.0"
description = ""
authors = ["knop-k <knop.krzysiek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
